# linear_regression_model

./: .gitattributes  README.md
summative/: main.py  pyproject.toml
summative/API/: prediction.py  requirements.txt
summative/FlutterApp/marathon_predictor/: README.md  pubspec.yaml
summative/FlutterApp/marathon_predictor/android/app/: build.gradle.kts
summative/FlutterApp/marathon_predictor/android/app/src/main/: AndroidManifest.xml
summative/FlutterApp/marathon_predictor/android/app/src/main/kotlin/com/example/marathon_predictor/: MainActivity.kt
summative/FlutterApp/marathon_predictor/ios/Runner/: Info.plist
summative/FlutterApp/marathon_predictor/ios/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/marathon_predictor/lib/: main.dart
summative/FlutterApp/marathon_predictor/linux/: CMakeLists.txt
summative/FlutterApp/marathon_predictor/linux/runner/: my_application.cc
summative/FlutterApp/marathon_predictor/macos/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/marathon_predictor/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
summative/FlutterApp/marathon_predictor/macos/Runner/Configs/: AppInfo.xcconfig
summative/FlutterApp/marathon_predictor/web/: index.html  manifest.json
summative/FlutterApp/marathon_predictor/windows/: CMakeLists.txt
summative/FlutterApp/marathon_predictor/windows/runner/: Runner.rc  main.cpp
summative/linear_regression/: feature_order.pkl  multivariate.ipynb  scaler.pkl
